--- a/index.html
+++ b/index.html
@@ -7,315 +7,271 @@
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body style="background-color: #EDF2F8;">
-<div id="mainrow container">
-	<div class="row center-inner" id="innermainrow">
-	<div>
-		<div class="col-xs-2" id="filter">
-			<form class="form-horizontal">
-				<label class="h4 text-center">Want to find some easier classes?</label>
-				<div class="form-group top15">
-					<div class="col-xs-12 text-center" id="paramheader">
-						Text Parameter
-					</div>
-					<div class="col-xs-12">
-						<input type="email" style="font-size: 8pt" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
-					</div>
-					<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
-						<xsall>Search will only return results that include the text parameter</xsall>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-xs-12 bottom15">
-						<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="technical">Technical</button>
-						<button type="button" class="btn btn-lg active col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="nontechnical">Non-Technical</button>
-						<button type="button" class="btn btn-lg active col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="globalcore">Global Core</button>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-xs-12 container">
-						<div class="row">
-							<div class="col-xs-12 text-center filtersectionheader" id="courselevellabel">
-								Course Level
+	<div id="mainrow container">
+		<div class="row center-inner" id="innermainrow">
+			<div>
+				<div class="col-xs-2" id="filter">
+					<form class="form-horizontal">
+						<label class="h4 text-center">Want to find some easier classes?</label>
+						<div class="form-group top15">
+							<div class="col-xs-12 text-center" id="paramheader">
+								Text Parameter
+							</div>
+							<div class="col-xs-12">
+								<input type="email" style="font-size: 8pt" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
+							</div>
+							<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
+								<xsall>Search will only return results that include the text parameter</xsall>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-xs-5"> <!--Minimum level-->
-								<div class="row">
-									<div class="checkbox center-inner">
-										<label><input type="checkbox"><xsall id="levelcheckboxtext">Min</xsall></label>
-									</div>
-								</div>
-								<div class="row">
-									<div class="dropdown center-inner">
-										<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
-											<span class="caret"></span>
-										</button>
-										<ul class="dropdown-menu">
-											<li><a href="#">HTML</a></li>
-											<li><a href="#">CSS</a></li>
-											<li><a href="#">JavaScript</a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							<div class="center-text col-xs-2 top45" id="shorthline"></div>
-							<div class="col-xs-5"> <!--Minimum level-->
-								<div class="row">
-									<div class="checkbox center-inner">
-										<label><input type="checkbox"><xsall id="levelcheckboxtext">Max</xsall></label>
-									</div>
-								</div>
-								<div class="row">
-									<div class="dropdown center-inner">
-										<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
-											<span class="caret"></span>
-										</button>
-										<ul class="dropdown-menu">
-											<li><a href="#">HTML</a></li>
-											<li><a href="#">CSS</a></li>
-											<li><a href="#">JavaScript</a></li>
-										</ul>
-									</div>
-								</div>
+						<div class="form-group">
+							<div class="col-xs-12 bottom15">
+								<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="technical">Technical</button>
+								<button type="button" class="btn btn-lg active col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="nontechnical">Non-Technical</button>
+								<button type="button" class="btn btn-lg active col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="globalcore">Global Core</button>
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-xs-12">
-						<div class="row">
-							<div class="col-xs-12 text-center filtersectionheader top15">
-								CULPA Nuggets
-							</div>
-						</div>
-						<div class="row top10">
+						<div class="form-group">
 							<div class="col-xs-12 container">
-								<button type="button" class="btn btn-lg active col-xs-5 col-xs-push-0" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/snug.png" id="nuggetimg"></button>
-								<button type="button" class="btn btn-lg active col-xs-5 col-xs-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/gnug.png" id="nuggetimg"></button>
+								<div class="row">
+									<div class="col-xs-12 text-center filtersectionheader" id="courselevellabel">
+										Course Level
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-5"> <!--Minimum level-->
+										<div class="row">
+											<div class="checkbox center-inner">
+												<label><input type="checkbox"><xsall id="levelcheckboxtext">Min</xsall></label>
+											</div>
+										</div>
+										<div class="row">
+											<div class="dropdown center-inner">
+												<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
+													<span class="caret"></span>
+												</button>
+												<ul class="dropdown-menu">
+													<li><a href="#">HTML</a></li>
+													<li><a href="#">CSS</a></li>
+													<li><a href="#">JavaScript</a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+									<div class="center-text col-xs-2 top45" id="shorthline"></div>
+									<div class="col-xs-5"> <!--Minimum level-->
+										<div class="row">
+											<div class="checkbox center-inner">
+												<label><input type="checkbox"><xsall id="levelcheckboxtext">Max</xsall></label>
+											</div>
+										</div>
+										<div class="row">
+											<div class="dropdown center-inner">
+												<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">2000
+													<span class="caret"></span>
+												</button>
+												<ul class="dropdown-menu">
+													<li><a href="#">HTML</a></li>
+													<li><a href="#">CSS</a></li>
+													<li><a href="#">JavaScript</a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-xs-12">
-						<div class="row">
-							<div class="col-xs-12 text-center filtersectionheader top15">
-								A-Range
-							</div>
-						</div>
-						<div class="row top10">
+						<div class="form-group">
 							<div class="col-xs-12">
-								<input type="range" id="myRange" value="90">
+								<div class="row">
+									<div class="col-xs-12 text-center filtersectionheader top15">
+										CULPA Nuggets
+									</div>
+								</div>
+								<div class="row top10">
+									<div class="col-xs-12 container">
+										<button type="button" class="btn btn-lg active col-xs-5 col-xs-push-0" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/snug.png" id="nuggetimg"></button>
+										<button type="button" class="btn btn-lg active col-xs-5 col-xs-push-2" style="color:white; font-size: medium; font-face: 'HelveticaNeue" id="nugget"><img class="bottom10" src="assets/gnug.png" id="nuggetimg"></button>
+									</div>
+								</div>
 							</div>
 						</div>
-						<div class="row">
+						<div class="form-group">
 							<div class="col-xs-12">
-								<xsall>At least <b>57%</b> of students got As</xsall>
+								<div class="row">
+									<div class="col-xs-12 text-center filtersectionheader top15">
+										A-Range
+									</div>
+								</div>
+								<div class="row top10">
+									<div class="col-xs-12">
+										<input type="range" id="myRange" value="90">
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-xs-12">
+										<xsall>At least <b>57%</b> of students got As</xsall>
+									</div>
+								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-xs-12">
-						<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Submit</button>
-					</div>
-				</div>
-			</form>
-		</div>
-		</div>
-		<div class="col-xs-6">
-			<div class="panel panel-default" id="tablepanel">
-				<div class="panel-heading">
-					<div class="row">
-						<div class="col-xs-4"><font color="grey"><b>Search Results</b></font></div>
-						<div class="col-xs-3 col-xs-push-5">
-							<button class="arrowbtn" id="leftarrow"><img src="assets/leftpage.png" style="height:20px;"></button>
-							<label class="left15">Page 4</label>
-							<button class="arrowbtn"><img src="assets/rightpage.png" style="height:20px;">
+						<div class="form-group">
+							<div class="col-xs-12">
+								<button type="button" class="btn btn-lg active col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="submitquery">Submit</button>
 							</div>
 						</div>
-					</div>
-					<div class="panel-body">
-						Only classes we have A-Range data for are included. Please submit your own 
-						A-Ranges to help increase our database!
-					</div>
-					<div class="table-responsive">
-						<table class="table table-bordered" id="datatable">
-							<thead>
-								<tr class="active">
-									<th>#</th>
-									<th>Professor</th>
-									<th>Course ID</th>
-									<th>Course Name</th>
-									<th>A-Range</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-								<tr>
-									<td>1</td>
-									<td>Paul S. Blaer</td>
-									<td>COMS W3134</td>
-									<td>Data Structures and Algorithms</td>
-									<td>41%</td>
-								</tr>
-
-
-							</tbody>
-						</table>
-					</div>
+					</form>
 				</div>
 			</div>
-			<div class="col-xs-4 top45 container" id="rightcollumn">
-				<div class="row">
-					<div class="row text-center" style="font-size: medium; font-face: 'Arial">
-						You can search a specific course <b>here</b>
+			<div class="col-xs-7 left30">
+				<div class="panel panel-default" id="tablepanel">
+					<div class="panel-heading">
+						<div class="row">
+							<div class="col-xs-4"><font color="grey"><b>Search Results</b></font></div>
+							<div class="col-xs-3 col-xs-push-5">
+								<button class="arrowbtn" id="leftarrow"><img src="assets/leftpage.png" style="height:20px;"></button>
+								<label class="left15">Page 4</label>
+								<button class="arrowbtn"><img src="assets/rightpage.png" style="height:20px;">
+								</div>
+							</div>
+						</div>
+						<div class="panel-body">
+							Only classes we have A-Range data for are included. Please submit your own 
+							A-Ranges to help increase our database!
+						</div>
+						<div class="table-responsive">
+							<table class="table table-bordered" id="datatable">
+								<thead>
+									<tr class="active">
+										<th>#</th>
+										<th>Professor</th>
+										<th>Course ID</th>
+										<th>Course Name</th>
+										<th>A-Range</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Paul S. Blaer</td>
+										<td>COMS W3134</td>
+										<td>Data Structures and Algorithms</td>
+										<td>41%</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
 				</div>
-				<div class="row text-center" style="color:#5D5D5D; font-size: small; font-face: 'HelveticNeue">
-					<div>Results will automatically appear in the query</div>
-				</div>
-				<div class="row">
-					<form class="form-horizontal">
-						<input type="email" style="font-size: 8pt" class="form-control" id="inputEmail3" placeholder="e.g. “ECON” or “PHYS”">
-					</form>
+				<div>
+					<div class="col-xs-3 top45 container" id="rightcollumn">
+						<div class="col-xs-8 col-xs-push-2">
+							<div class="row">
+								<div class="row text-center" style="font-size: medium; font-face: 'Arial">
+									You can search a specific course <b>here</b>
+								</div>
+							</div>
+							<div class="row text-center top7" style="color:#5D5D5D; font-size: small; font-face: 'HelveticNeue">
+								<div>Results will automatically appear in the query</div>
+							</div>
+							<div class="row top7">
+								<form class="form-horizontal">
+									<input type="email" style="font-size: 10pt" class="form-control" id="inputEmail3" placeholder="Search...">
+								</form>
+							</div>
+							<div class="row top60">
+								<div id="submission">
+								<div class="row">
+									<div class="text-center top15" style="font-size: medium; font-face: 'HelveticNeue">
+										Submit your A-ranges
+									</div>
+									</div>
+								</div>
+
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
 
 
