--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #EDF2F8;">
 <div class="row"><!--Delete this patch-notes later-->
-	<div class="col-xs-12 col-xs-push-1 top15"><p><i>Patch Notes (1/7/17):</i> Fixed a bug preventing people from submitting A-Ranges. Added plus-minus to search results with more than one entry.</p></div>
+	<div class="col-xs-12 col-xs-push-1 top15"><p><i>Patch Notes (1/8/17):</i> Fixed a bug preventing people from submitting A-Ranges. Fixed the issue preventing the filter-search button from working every time.</p></div>
 </div>
 	<div id="mainheader">
 		<div class="row">
@@ -31,17 +31,17 @@
 	<div class="row center-inner" id="innermainrow">
 		<div>
 			<div class="col-xs-2" id="filter">
-				<form class="form-horizontal">
+				<form class="form-horizontal" id="filterform">
 					<label class="h4 text-center">Want to find some easier classes?</label>
 					<div class="form-group top15">
 						<div class="col-xs-12 text-center" id="paramheader">
-							Text Parameter
+							Text Filter
 						</div>
 						<div class="col-xs-12">
 							<input type="text" style="font-size: 8.5pt" class="form-control" id="textparam" placeholder="e.g. “ECON” or “PHYS”">
 						</div>
 						<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
-							<xsall>Search will only return results that include the text parameter</xsall>
+							<xsall>FYI: The other textfield will search as you type. This wont.</xsall>
 						</div>
 					</div>
 					<div class="form-group">
@@ -194,7 +194,7 @@
 							</div>
 						</div>
 						<div class="row text-center top7" style="color:#5D5D5D; font-size: small; font-face: 'HelveticNeue">
-							<div>Results will automatically appear in the query</div>
+							<div>Results will automatically appear in the table</div>
 						</div>
 						<div class="row top7">
 							<form class="form-horizontal" id="searchForm">
@@ -256,7 +256,7 @@
 							</div>
 							<div id="emailprompt" class="text-center row"><i>~ I made this website. If you would like</i></div>
 							<div id="emailprompt" class="text-center row"><i>to contact me, please email me at</i></div>
-							<div id="emailprompt" class="text-center row top5"><a style="color:black;" href="mailto:contact.ezacu@gmail.com"><b>contact.ezacu@gmail.com</b></a></div>
+							<div id="emailprompt" class="text-center row top5"><a style="color:black;" href="mailto:lol2107@columbia.edu"><b>lol2107@columbia.edu</b></a></div>
 						</div>
 					</div>
 				</div>
