--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body style="background-color: #EDF2F8;">
-<div class="row"><!--Delete this patch-notes later-->
+<!--<div class="row">
 	<div class="col-xs-12 col-xs-push-1 top15"><p><i>Patch Notes (1/8/17):</i> Fixed a bug preventing people from submitting A-Ranges. Fixed the issue preventing the filter-search button from working every time.</p></div>
-</div>
+</div>-->
 	<div id="mainheader">
 		<div class="row">
 			<div class="col-xs-7 col-xs-push-1 top30" style="font-size: 34pt; font-face: 'HelveticaNeue">
@@ -32,7 +32,7 @@
 		<div>
 			<div class="col-xs-2" id="filter">
 				<form class="form-horizontal" id="filterform">
-					<label class="h4 text-center">Want to find some easier classes?</label>
+					<label class="h4 text-center top15">Want to boost your GPA?</label>
 					<div class="form-group top15">
 						<div class="col-xs-12 text-center" id="paramheader">
 							Text Filter
