--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,25 @@
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body style="background-color: #EDF2F8;">
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=1007010152777162";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 	<div id="mainheader" class="center-inner">
-		<div class="row">
-			<div class="col-xs-7 col-xs-push-1 top30" style="font-size: 34pt; font-face: 'HelveticaNeue">
+		<div class="row left30">
+		<div class="fb-share-button col-xs-1 text-center top60" data-href="https://www.ezacu.com/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.ezacu.com%2F&amp;src=sdkpreparse">Share</a></div>
+			<div class="col-xs-7 col-xs-push-0 top30" style="font-size: 34pt; font-face: 'HelveticaNeue">
 				<b>Welcome to EZACU.com</b>
 			</div>
 			<div class="col-xs-3 top30 text-center" style="font-size: 12pt; font-face: 'HelveticaNeue">
 				<i><u>Definition of <b>A-Range: </b></u><p>The percentage of students enrolled in a class who received an A- or better</p></i>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row left30">
 			<div class="col-xs-10 col-xs-push-1 left10 bottom30" id="mainsubtitle" style="font-size: 16pt; font-face: 'HelveticaNeue">
 				<b>The database of A-Ranges at Columbia University</b>
 			</div>
