--- a/public/index.html
+++ b/public/index.html
@@ -21,30 +21,28 @@
 	</div>
 
 	<div id="mainheader" class="center-inner">
-		<div class="row left30">
+		<div class="row left30 bottom30">
 			<div class="col-xs-1 text-center" id="fbbtn">
 				<b>Please Share!</b>
 				<div class="fb-share-button " data-href="https://www.ezacu.com/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.ezacu.com%2F&amp;src=sdkpreparse">Share</a>
 				</div>
 			</div>
-			<div class="col-xs-7 col-xs-push-0 top30" style="font-size: 34pt; font-face: 'HelveticaNeue">
-				<b>Welcome to EZACU.com</b>
+			<div class="col-xs-7 col-xs-push-0 top30">
+				<div id="title">
+					<b style="font-size: 34pt; font-face: 'HelveticaNeue">Welcome to EZACU.com</b>
+					<b style="font-size: 16pt; font-face: 'HelveticaNeue" class="left10">The database of A-Ranges at Columbia University</b>
+				</div>
 			</div>
 			<div class="col-xs-3 top30 text-center" style="font-size: 12pt; font-face: 'HelveticaNeue">
 				<i><u>Definition of <b>A-Range: </b></u><p>The percentage of students enrolled in a class who received an A- or better</p></i>
 			</div>
 		</div>
-		<div class="row left30">
-			<div class="col-xs-10 col-xs-push-1 left10 bottom30" id="mainsubtitle" style="font-size: 16pt; font-face: 'HelveticaNeue">
-				<b>The database of A-Ranges at Columbia University</b>
-			</div>
-		</div>
 	</div>
-	
+
 	<div id="mainrow container">
 		<div class="row center-inner" id="innermainrow">
 
-			<div class="col-xs-5 top45 container randompink" id="rightcollumn">
+			<div class="col-xs-5 top45 container " id="rightcollumn">
 				<div class="col-xs-10 col-xs-push-1">
 					<div class="row">
 						<div class="row text-center" style="font-size: medium; font-face: 'Arial">
@@ -119,7 +117,7 @@
 				</div>
 			</div>
 
-			<div class="col-xs-7 randomblue">
+			<div class="col-xs-7 ">
 				<div class="panel panel-default" id="tablepanel">
 					<div class="panel-heading">
 						<div class="row">
@@ -155,7 +153,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="randompink">
+			<div class="">
 				<div class="col-xs-2" id="filter">
 					<form class="form-horizontal" id="filterform">
 						<label class="h4 text-center top15">Want to boost your GPA?</label>
