--- a/public/index.html
+++ b/public/index.html
@@ -279,6 +279,7 @@
 
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="assets/jquery.cookie.js"></script>
 <script src="js/bigdata.js" type="text/javascript">
 </script>
 
