--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
 				<div class="col-xs-2" id="filter">
 					<form class="form-horizontal" id="filterform">
 						<label class="h4 text-center top15">Want to boost your GPA?</label>
-						<div class="form-group top15">
+						<!--<div class="form-group top15">
 							<div class="col-xs-12 text-center" id="paramheader">
 								Text Filter
 							</div>
@@ -167,8 +167,8 @@
 							<div class="col-xs-10 col-xs-push-1 text-center" id="paramnote">
 								<xsall>FYI: The other textfield will search as you type. This wont.</xsall>
 							</div>
-						</div>
-						<div class="form-group">
+						</div>-->
+						<div class="form-group top15">
 							<div class="col-xs-12 bottom15">
 								<button type="button" class="btn btn-lg col-xs-12" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="technical">Technical</button>
 								<button type="button" class="btn btn-lg col-xs-12 top15" style="color:white; font-size: xsall; font-face: 'HelveticaNeue" id="nontechnical">Non-Tech</button>
