--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
 	<title>EZACU</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/custom.css">
+	<datalist id="courseIdList">
+	</datalist>
+	<datalist id="courseNameList">
+	</datalist>
+	<datalist id="profNameList">
+	</datalist>
 </head>
 <body style="background-color: #EDF2F8;">
 	<div id="fb-root"></div>
@@ -77,7 +83,7 @@
 										Course ID
 									</div>
 									<div class="col-xs-8 col-xs-push-1">
-										<input type="text" style="font-size: 11pt" class="form-control" id="course-id" placeholder="e.g. COMS W1006">
+										<input type="text" list="courseIdList" style="font-size: 11pt" class="form-control" id="course-id" placeholder="e.g. COMS W1006">
 									</div>
 								</div>
 								<div class="form-group top15">
@@ -85,7 +91,7 @@
 										Course Name
 									</div>
 									<div class="col-xs-10 col-xs-push-1">
-										<input type="text" style="font-size: 11pt" class="form-control" id="course-name" placeholder="e.g. Principles of Economics">
+										<input type="text" list="courseNameList" style="font-size: 11pt" class="form-control" id="course-name" placeholder="e.g. Principles of Economics">
 									</div>
 								</div>
 								<div class="form-group top15">
@@ -93,7 +99,7 @@
 										Professor Name
 									</div>
 									<div class="col-xs-10 col-xs-push-1">
-										<input type="text" style="font-size: 11pt" class="form-control" id="prof-name" placeholder="e.g. Sunil Gulati">
+										<input type="text" list="profNameList" style="font-size: 11pt" class="form-control" id="prof-name" placeholder="e.g. Sunil Gulati">
 									</div>
 								</div>
 								<div class="form-group top15">
