--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 		fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 	<div class="row"><!--Delete this patch-notes later-->
-		<div class="text-center" id="message" style="color: #BD0FE1;"><b></b></div>
+		<div class="text-center" id="message" style="font-size: 18pt; color: #BD0FE1;"><b></b></div>
 	</div>
 
 	<div id="mainheader" class="center-inner">
